<resources>
    <string name="app_name">Live&amp;Learn</string>
    <string name="title_activity_login">Вхід в Live&amp;Learn</string>
    <string name="toast_minimum_password">Пароль за короткий. Мінімальна довжина 6 символів!</string>
    <string name="toast_auth_failed">Не вдається ввійти! Перевірте, будь ласка, правильність введених даних</string>
    <string name="button_login">ВВІЙТИ</string>
    <string name="button_forgot_password">Забули пароль?</string>
    <string name="title_activity_reset_password">Відновлення паролю</string>
    <string name="text_forgot_password">Забули пароль?</string>
    <string name="text_forgot_password1">Нам необхідно Ваша електронна скринька щоб відправити інструкцію по відновленню.</string>
    <string name="toast_user_created">"Користувача зареєстровано: "</string>
    <string name="button_reset_password">Відновити пароль</string>
    <string name="title_activity_signup">Реєстрація</string>
    <string name="button_sign_up">Зареєструвати</string>
    <string name="hint_first_name">ПІБ</string>
    <string name="hint_phone">Телефон</string>
    <string name="hint_phone2">Телефон 2</string>
    <string name="hint_email">Електронна скринька</string>
    <string name="hint_date_birth">Дата народження</string>
    <string name="hint_card">Номер картки</string>
    <string name="hint_password">Пароль</string>
    <string name="app_title">Live&amp;Learn</string>
    <string name="app_motto">Курси іноземних мов</string>
    <string name="button_zvit">Створити Заняття</string>
    <string name="button_programs">Клієнти</string>
    <string name="button_calendar1">Календар</string>
    <string name="button_requisites">Кабінети</string>
    <string name="hint_double_press">Натисніть ще раз аби вийти з додатку</string>
    <string name="button_about">Про проект</string>
    <string name="button_fb">Ми в Facebook</string>
    <string name="button_site">Наш сайт</string>
    <string name="title_activity_user">Особистий кабінет</string>
    <string name="action_settings">Налаштування</string>
    <string name="toast_data_updated">Зміни збережено</string>
    <string name="toast_data_started_updated">Аватар загружається</string>
    <string name="action_logout">Вийти</string>
    <string name="dialog_logout_title">Вийти з аккаунта</string>
    <string name="dialog_logout_message"> Ви впевнені що бажаєте вийти з аккаунта?</string>
    <string name="title_activity_events">Повідомлення</string>
    <string name="title_activity_lesson">Заняття %s</string>
    <string name="action_edit">Редагувати</string>
    <string name="action_add">Зберегти</string>
    <string name="title_activity_calendar">Календар</string>
    <string name="toast_edit_impossible">Редагувати можна тільки сьогоднішній або майбутні заняття</string>
    <string name="title_activity_cost">Витрати</string>
    <string name="title_activity_notification">Повідомлення</string>
    <string name="dialog_delete_mk_title">Видалити</string>
    <string name="dialog_delete_title">Видалити</string>
    <string name="dialog_delete_message">Після видалення відновити буде неможливо</string>
    <string name="title_activity_dashboard">"Адмін панель (%1$s ГРН)"</string>
    <string name="mk_done">Проведено Майстер Класів: </string>
    <string name="toast_saved">Збережено</string>
    <string name="hint_price">Ціна</string>
    <string name="hint_title2">Тип</string>
    <string name="hint_title1">Назва</string>
    <string name="text_cost_common">Загальні</string>
    <string name="text_cost_mk">На офіс</string>
    <string name="text_cost_list">Список витрат</string>
    <string name="action_delete_all">  ВИДАЛИТИ ВСЕ  </string>
    <string name="dialog_cost_delete_title">Видалити витрату</string>
    <string name="dialog_cost_delete_message">Після видалення відновити витрату буде неможливо</string>
    <string name="dialog_cost_delete_all_title">Видалити всі витрати</string>
    <string name="dialog_cost_delete_all_message">Після видалення відновити витрати буде неможливо</string>
    <string name="text_room">Кімната</string>
    <string name="text_all">Всього</string>
    <string name="text_birthdays">Дні Народження</string>
    <string name="text_charts_income">Виручка / 80% / Прибуток</string>
    <string name="text_charts">Чистий прибуток</string>
    <string name="dialog_delete_notification_title">Видалити діалог</string>
    <string name="dialog_delete_notification_message">Після видаленння відновити діалог буде неможливо</string>
    <string name="dialog_about_message">Live&amp;Learn  \nv </string>
    <string name="text_copied">Скопійовано в буфер обміну</string>
    <string name="dialog_report_save_before_close_title">Зберегти зміни</string>
    <string name="dialog_report_save_before_close_text">Ви хочете зберегти зміни у Святі?</string>
    <string name="title_activity_salary">Заробітна плата</string>
    <string name="text_mk">МК</string>
    <string name="text_stavka">Ставка</string>
    <string name="text_percent">Відсотки</string>
    <string name="text_income_">Оборот</string>
    <string name="text_cost_total1">Витрати</string>
    <string name="text_salary">Заробітна плата</string>
    <string name="text_salary_detail_title">Деталі</string>
    <string name="text_salary_condition_title">Умови</string>
    <string name="text_salary_detail_stavka">"Ставка:"</string>
    <string name="text_salary_detail_percent">"Відсоток від обороту:"</string>
    <string name="text_salary_detail_mk1">"МК:"</string>
    <string name="text_salary_detail_bd_children">МК за одну дитину:</string>
    <string name="text_salary_detail_art">"Арт МК:"</string>
    <string name="hint_comment">Добавити Коментар</string>
    <string name="action_clear_report">Очистити</string>
    <string name="action_delete_report">Видалити свято</string>
    <string name="action_today">Сьогодні</string>
    <string name="toast_report_deleted">Свято видалено</string>
    <string name="action_go_to_calendar">КАЛЕНДАР</string>
    <string name="toast_report_cleared">Свято очищено</string>
    <string name="hint_time">Час роботи</string>
    <string name="action_new_user">Новий користувач</string>
    <string name="text_friend_list">Колеги</string>
    <string name="snack_deleted">Видалено</string>
    <string name="action_plan">План МК</string>
    <string name="action_save">Зберегти</string>
    <string name="title_activity_edit">Редагування</string>
    <string name="title_activity_add">Добавлення</string>
    <string name="hint_description">Детальний опис (не обовязково)</string>
    <string name="mk_updated">Дані обновлено успішно</string>
    <string name="mk_added">МК створено успішно</string>
    <string name="not_added">Діалог створено успішно</string>
    <string name="dialog_mk_edit_text">В тексті є зміни, зберегти їх?</string>
    <string name="dialog_choose_mk">Виберіть МК</string>
    <string name="text_add_photo">Сфотографувати Свято</string>
    <string name="action_delete_mk">Видалити</string>
    <string name="photo_uploading">"Фото загружається. Зачекайте хвильку.."</string>
    <string name="hint_first_date">Перший робочий день</string>
    <string name="photo_uploaded">Фото збережено</string>
    <string name="tab_room_1">Зелений</string>
    <string name="tab_room_2">Синій</string>
    <string name="tab_room_3">Оливк.</string>
    <string name="tab_room_4">Бордовий</string>
    <string name="title_activity_mk_plan">Майстер класи</string>
    <string name="title_activity_rooms_tab">Кабінети 12.05.2018</string>
    <string name="text_mk_full">Майстер клас</string>
    <string name="title_activity_mk_item">Майстер клас</string>
    <string name="expand_more">Показати опис</string>
    <string name="text_mk_share">ПОДІЛИТИСЬ</string>
    <string name="toast_mk_not_set">Майстер клас не вказано</string>
    <string name="hint_link">Посилання (http://)</string>
    <string name="text_mk_link">ПОСИЛАННЯ</string>
    <string name="title_activity_about">Про проект</string>
    <string name="text_about_company">
        "Чебурашка КІДС була створена 01,06,2016р.\n"
        "Наша мета:\n"
        "Наша місія:\n"
        "Наша позиція на ринку:\n"

    </string>
    <string name="title_activity_notification_item">Повідомлення</string>
    <string name="hint_short_description">Короткий опис</string>
    <string name="hint_password_one_more">Пароль (ще раз)</string>
    <string name="toast_different_password">Паролі не співпадають</string>
    <string name="text_password_change">Зміна паролю</string>
    <string name="action_change_password">ЗМІНИТИ ПАРОЛЬ</string>
    <string name="text_user_details">Основні дані</string>
    <string name="toast_nothing_to_change">Немає змін в даних</string>
    <string name="button_link">Поділитись</string>
    <string name="hrn_percent">"%1$s відсотків"</string>
    <string name="hrn_child">"%1$s грн/дитина"</string>
    <string name="hrn_day">"%1$s грн/день"</string>
    <string name="hrn">"%1$s грн"</string>
    <string name="HRN">"%1$s ГРН"</string>
    <string name="income">"%1$s/%2$s ГРН"</string>
    <string name="text_show_details">Показати детальніше</string>
    <string name="text_salary_switch">Використовувати спеціальні умови</string>
    <string name="dialog_discart_changes">Вийти без збереження?</string>
    <string name="action_discard">ВИЙТИ</string>
    <string name="action_cancel">СКАСУВАТИ</string>
    <string name="action_save_changes">ЗБЕРЕГТИ ЗМІНИ</string>
    <string name="action_no">НІ</string>
    <string name="action_choose">ВИБРАТИ</string>
    <string name="image_permissions">Будь ласка, добавте дозвіл на використання камери</string>
    <string name="text_check_list">Чек-Лист</string>
    <string name="text_check_list_1"><![CDATA[Освітлення & Кондиціонер]]></string>
    <string name="text_check_list_2"><![CDATA[Іграшки & Батут]]></string>
    <string name="text_check_list_3">Прибирання</string>
    <string name="text_check_list_4"><![CDATA[Стіна & Підвіконник]]></string>
    <string name="text_check_list_5"><![CDATA[Відмінний настрій:)]]></string>
    <string name="button_check_list_done">Готово</string>
    <string name="toast_check_list_not_all_checked">Не всі пункти вибрано!</string>
    <string name="title_activity_maps">Карта</string>
    <string name="maps_marker_title">Розташування</string>
    <string name="text_check_list_description">*Якщо з певним пунктом виникли труднощі,
        будь ласка, вкажіть обставини в коментарях нижче.</string>
    <string name="report_toast_no_image">Відсутнє фото свята. Сфотографуйте свято перед збереженням!</string>
    <string name="title_activity_alarm">Live&amp;Learn    Чек-Лист</string>
    <string name="stop_alarm">Пройти Чек-Лист</string>
    <string name="text_comments_list">Дозволити коментувати</string>
    <string name="hint_comment_add">Введіть повідомлення…</string>
    <string name="dialog_remove_title">Видалити повідомлення?</string>
    <string name="choose_images">Виберіть картинку</string>
    <string name="empty_string" />
    <string name="online">Online</string>
    <string name="last_online">Востанє в мережі %s</string>
    <string name="last_online_long_time_ago">Востаннє в мережі давно</string>
    <string name="calendar_add_report">СТВОРИТИ ЗАНЯТТЯ</string>
    <string name="expense_added">Витрату добавлено</string>
    <string name="expense_upload">Загрузити фото</string>
    <string name="button_clients">НАШІ КЛІЄНТИ</string>
    <string name="title_activity_clients_tab">Наші Клієнти</string>
    <string name="tab_text_1">КОНТАКТИ</string>
    <string name="tab_text_2">ДНІ НАРОДЖЕННЯ</string>
    <string name="contacts_filter_by_name">Фільтр: І\'мя</string>
    <string name="contacts_filter_by_phone">Фільтр: Телефон</string>
    <string name="client_added">Контакт створено</string>
    <string name="hint_client_description">Опис</string>
    <string name="user_type_adult">Дорослі</string>
    <string name="user_type_child">Діти</string>
</resources>